@startuml
' JavaMiniProject - high-level class diagram (backend + frontend)
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "backend" {
  package "server" {
    class MultiServer {
      - executorService : ExecutorService
      {static} - threadPool : int
      {static} - port : int
      + start() : void
    }

    class ClientHandler {
      - socket : Socket
      - mapper : ObjectMapper
      - jwtUtil : JwtUtil
      + run() : void
    }
    ClientHandler ..|> Runnable
    MultiServer --> ClientHandler : submits
  }

  package "command" {
    interface Command {
      + execute(data : Object, clientContext : ClientContext) : void
    }

    class CommandRegistry {
      {static} - commands : Map<String, Command>
      {static} + init() : void
      {static} + getCommand(name : String) : Command
    }

    class ClientContext {
      - output : PrintWriter
      - username : String
      - role : String
      - token : String
      + getOutput() : PrintWriter
      + getUsername() : String
      + setUsername(username : String) : void
      + getRole() : String
      + setRole(role : String) : void
      + getToken() : String
      + setToken(token : String) : void
    }

    class LoginCommand
    class LogoutCommand
    class GetAllUsersCommand
    class CreateUserCommand

    LoginCommand ..|> Command
    LogoutCommand ..|> Command
    GetAllUsersCommand ..|> Command
    CreateUserCommand ..|> Command

    CommandRegistry o-- Command : registry
  }

  package "dto.requestDto" {
    class RequestDTO {
      - command : String
      - data : Object
      - token : String
      + getCommand() : String
      + getData() : Object
      + getToken() : String
    }
    class LoginRequestDTO
    class UserRequestDTO
  }

  package "dto.responseDto" {
    class LoginResponseDTO
    class LogoutResponseDTO
    class UserResponseDTO
  }

  package "service" {
    class AuthService {
      - userDAO : UserDAO
      + authenticate(username : String, password : String) : AuthResult
      + logout(token : String) : LogoutResponseDTO
      + isTokenValid(token : String) : boolean
    }
    class "AuthService.AuthResult" as AuthResult {
      - success : boolean
      - username : String
      - role : String
      - message : String
      - token : String
    }

    class UserService {
      - userDAO : UserDAO
      + getAllUsers() : List<User>
      + createUser(dto : UserRequestDTO) : boolean
    }

    AuthService *-- AuthResult
  }

  package "dao" {
    class UserDAO {
      - connection : Connection
      + findByUsernameAndPassword(username : String, password : String) : User
      + findAllUsers() : List<User>
      + createUser(user : User) : User
    }
  }

  package "model" {
    class User {
      - userId : String
      - username : String
      - email : String
      - password : String
      - contactNumber : String
      - profilePicture : String
      - role : String
    }
  }

  package "utility" {
    class JwtUtil {
      {static} - SECRET_KEY : SecretKey
      + validateToken(token : String) : boolean
      + getUsernameFromToken(token : String) : String
      + getRoleFromToken(token : String) : String
      {static} + getSecretKey() : SecretKey
    }

    class TokenBlacklist {
      {static} - blacklistedTokens : Set<String>
      {static} + blacklist(token : String) : void
      {static} + isBlacklisted(token : String) : boolean
    }

    class HikariCPDataSource {
      - dataSource : HikariDataSource
      {static} + getInstance() : HikariCPDataSource
      + getConnection() : Connection
      + close() : void
    }
  }

  ' cross-package relationships (backend)
  ClientHandler --> RequestDTO : parses JSON
  ClientHandler --> ClientContext
  ClientHandler --> CommandRegistry : lookup
  ClientHandler ..> Command : executes
  ClientHandler ..> JwtUtil : validates

  CommandRegistry ..> HikariCPDataSource : gets Connection
  CommandRegistry --> UserDAO
  CommandRegistry --> AuthService
  CommandRegistry --> UserService
  CommandRegistry --> LoginCommand
  CommandRegistry --> LogoutCommand
  CommandRegistry --> GetAllUsersCommand
  CommandRegistry --> CreateUserCommand

  LoginCommand --> AuthService
  LoginCommand --> LoginRequestDTO
  LoginCommand --> LoginResponseDTO
  LoginCommand --> ClientContext

  LogoutCommand --> AuthService
  LogoutCommand --> LogoutResponseDTO
  LogoutCommand --> ClientContext

  GetAllUsersCommand --> UserService
  GetAllUsersCommand --> AuthService
  GetAllUsersCommand --> UserResponseDTO

  CreateUserCommand --> UserService
  CreateUserCommand --> AuthService
  CreateUserCommand --> UserRequestDTO

  AuthService --> UserDAO
  AuthService ..> JwtUtil : uses key/validation
  AuthService ..> TokenBlacklist
  UserService --> UserDAO
  UserDAO --> User
}

package "frontend (JavaFX)" {
  class "HelloApplication" as HelloApplication
  class "HelloController" as HelloController
  class "Launcher" as Launcher
  class "BMICalculator" as BMICalculator

  HelloApplication ..|> "javafx.application.Application"
  BMICalculator ..|> "java.awt.event.ActionListener"
  Launcher ..> "java.net.Socket"
  Launcher ..> "com.fasterxml.jackson.databind.ObjectMapper"
}

Launcher ..> MultiServer : connects to port 5000

@enduml

